[package]
name = "brainbox"
version = "0.1.0"
edition = "2021"

[dependencies]

uuid = { version = "1.10.0", features = ["v4"] }
eframe = "0.29.1"
egui = "0.29.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.12.1"
regex = "1.11.0"
egui_commonmark = "0.18.0"
sled = "0.34.7"
petgraph = "0.6.5"
egui_graphs = "0.22.0"
